# Elaborato_3_Lab_QT

./: Activity.cpp  Activity.h  ActivityTracker.cpp  ActivityTracker.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h
Test/: CMakeLists.txt
Test/Unit/: ActivityTrackerTest.cpp
